--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "gen_random"
 version = "0.1.0"
 edition = "2021"
-
+license = "MIT"
+authors = ["SunsJay <sunsjay0806@gmail.com>"]
+description = "A lib for generating random number by custom its length and kind."
+keywords = ["random"]
+homepage = "https://github.com/SunsJay/gen-random"
+repository = "https://github.com/SunsJay/gen-random"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "*"
-rand = "*"
+rand = "0.8.5"
